packages/taquito-michel-codec/test/contracts_007/ill_typed/contract_annotation_default.tz
parameter (contract (or (or (int %A) (nat %B)) (unit %default)));
storage unit;
code {
       CAR;
       # CONTRACT %default nat == CONTRACT nat and the former is not allowed.
       DUP; ADDRESS; CONTRACT %default nat; ASSERT_SOME; DROP;
       DROP;
       UNIT;
       NIL operation;
       PAIR
     };
